# NoteExtractionMatlabToC

./: main.c
MatlabToC/: ECE6750_Project_FurElise.m  NewText.txt  main.c
SudokuSolver/sudokuSolver/: sodokuSolverFunctions.h  sudokuSolver.cbp  sudokuSolver.depend  sudokuSolver.layout  sudokuSolverFunctions.cpp  sudokuSolverFunctions.h
gTestMockAndStubs/src/: CMakeLists.txt  Calculator.h  CalculatorClass.h
gTestMockAndStubs/test/: CMakeLists.txt  MockCalculatorClass.h  example_multiply.cpp  mock_calculator_test.cpp
gtest/test/: CMakeLists.txt
sudokuSolver/sudokuSolver/: main.cpp  sudokuSolver.depend  sudokuSolver.layout  sudokuSolverFunctions.cpp  sudokuSolverFunctions.h
